RadASM 2.2.1.7
--------------
2.2.1.7
o The code parser for masm has been enhanced to include datatypes and array sizes.
o Included RADebug addin. It adds sourcecode debugging capabilities to masm projects.
  See the RADebug.txt for more info.
o Added masmArray.api file. It contains constants often used to specify array sizes.
  Currently it only contains MAX_PATH.
o Updated masmType.api file to include the size of each data type.
o Fixed a minor bug in RAEdit. REM_GETCURSORWORD did not include the size of the
  line number bar.
2.2.1.6
o Added resource type RT_HTML
o Code lines now has a yellow indicator for unsaved chanees, green for saved changes.
o Better code complete support for C/C++ (locals (Ctrl+Shift+Space) and casted structures). 
0 Added protection against malicious project files (.rap). A dialog shows the command that will be
  executed. It is up to you to accept the command or not. There is also a 'Don't ask again' option.
  Even with this added protection you should always open a project file from a non trusted source
  in text edit mode (File / Open File) and verify that it not executes any suspicious commands.
o Fixed RadASM Project File (.rap) Stack-Based Buffer Overflow Vulnerability.
o Fixed bug with environment variable that caused crash on win 2000.
2.2.1.5
o Option to set syntax backcolor on strings, comments, operators and numbers & hex values.
o Api files can now have commented lines. A commented line must start with ; or //
o Ini files now has a version.
o Updated addins to latest version. This fixess several bugs.
o Fixed bug with split screen.
2.2.1.4
o Flat toolbar on Project and Properties tools.
o Rearanged Project toolbar buttons.
o Option to set Info tool colors.
o Incraced size of build option buffer.
o Added block guiders.
o Variable speed selection scrolling by mouse.
o Fixed bug with environment option if there was no entries.
o Fixed bug with project option / project groups.
2.2.1.3
o Added support for Free Pascal.