@@ -86,7 +86,7 @@ MilestoneOnTime=2
 MilestoneOnDate=0
 MilestoneOnDateWhen=1
 MilestoneOnDateStatus=0
-MilestoneOnDateDate=26
+MilestoneOnDateDate=30
 MilestoneOnDateTimeYear=2005
 MilestoneOnDateTimeMonth=4
 MilestoneOnDateTimeDate=16
@@ -119,7 +119,7 @@ ProductVer4Range=0
 6=00FFFFFF
 7=00FFFFFF
 [Size]
-1=0,0,0,0,20367
+1=0,0,0,0,20511
 2=0,0,0,0,1151
 4=0,0,0,0,88
 6=0,0,0,0,0
