@@ -116,11 +116,11 @@ Group=Added files,Assembly,Resources,Misc,Modules
 [Size]
 5=0,0,0,0,8127
 4=0,0,0,0,6283
-2=0,0,0,0,6416
-1=0,0,0,0,16934
-8=0,0,0,0,10166
+2=0,0,0,0,4256
+1=0,0,0,0,17920
+8=0,0,0,0,9668
 6=0,0,0,0,8397
-7=0,0,0,0,22729
+7=0,0,0,0,14976
 3=0,0,0,0,56
 9=0,0,0,0,57
 10=0,0,0,0,5569
@@ -139,7 +139,7 @@ MilestoneOnTime=2
 MilestoneOnDate=0
 MilestoneOnDateWhen=1
 MilestoneOnDateStatus=0
-MilestoneOnDateDate=29
+MilestoneOnDateDate=30
 MilestoneOnDateTimeYear=2009
 MilestoneOnDateTimeMonth=5
 MilestoneOnDateTimeDate=28
